# infinitex

./: Cargo.toml  README.md
.github/workflows/: rust.yml
bins/: readme.md
src/: app.rs  canvas.rs  file_io.rs  latex.rs  main.rs  models.rs  selection.rs
