[package]
name = "math-workspace"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
mathjax_svg = "3.2"
resvg = "0.44"
usvg = "0.44"
tiny-skia = "0.11"
